--- a/Practice1/java/src/main/resources/templates/index.html
+++ b/Practice1/java/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>BANG!</title>
 </head>
 <body>
-    <h1>MŰXIK</h1>
+    <ul th:each="bangCard : ${allCards}" th:object="${bangCard}">
+        <li th:text="*{name}"></li>
+    </ul>
 
 </body>
 </html>
