--- a/dance/src/main/resources/templates/index.html
+++ b/dance/src/main/resources/templates/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Index</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="ajax.js"></script>
+  <title>DANCE DANCE!</title>
 </head>
 <body>
-  <h1>Hello! I am working master!</h1>
+  <div class="background">
+    <div class="banner">
+      <div class="pic">
+        <h1>DANCE DANCE!</h1>
+      </div>
+    </div>
+
+    <div class="content">
+      <h1>RULES</h1>
+      <p>1. Use the arrows on your keyboard to make your character dance to the music!</p>
+      <p>2. Have fun!</p>
+    </div>
+  </div>
 </body>
 </html>
