--- a/dance/src/main/resources/static/style.css
+++ b/dance/src/main/resources/static/style.css
@@ -30,3 +30,13 @@ html, body {
   display: block;
   margin: 100px auto;
 }
+
+.dance {
+  width: 300px;
+  height: 300px;
+  margin: 100px auto;
+}
+
+img {
+  position: absolute;
+}
