--- a/dance/src/main/resources/templates/index.html
+++ b/dance/src/main/resources/templates/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="ajax.js"></script>
   <title>DANCE DANCE!</title>
 </head>
 <body>
@@ -17,7 +16,8 @@
     <div class="content">
       <h1>RULES</h1>
       <p>1. Use the arrows on your keyboard to make your character dance to the music!</p>
-      <p>2. Have fun!</p>
+      <p>2. Have</p>
+      <a href="/dance">FUN!</a>
     </div>
   </div>
 </body>
