--- a/dance/src/main/resources/templates/dance.html
+++ b/dance/src/main/resources/templates/dance.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="ajax.js"></script>
   <title>DANCE DANCE!</title>
 </head>
 <body>
@@ -19,5 +18,6 @@
     <img class="base" src="base.png">
   </div>
 </div>
+<script src="dom.js"></script>
 </body>
 </html>
