style(dance): add music and button style and font-family

--- a/dance/src/main/resources/templates/dance.html
+++ b/dance/src/main/resources/templates/dance.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>DANCE DANCE!</title>
 </head>
@@ -13,11 +14,14 @@
     </div>
   </div>
 
+  <iframe src="cold.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+
   <div class="dance">
     <img class="arms" src="arms.png">
     <img class="base" src="base.png">
   </div>
 </div>
+
 <script src="dom.js"></script>
 </body>
 </html>
