--- a/dance/src/main/resources/static/style.css
+++ b/dance/src/main/resources/static/style.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
+    font-family: 'ZCOOL KuaiLe', cursive;
 }
 
 .background {
@@ -26,9 +27,27 @@ html, body {
   width: 50%;
   background-color: lightgray;
   border-radius: 10px;
-  padding: 10px;
+  padding: 40px;
   display: block;
   margin: 100px auto;
+}
+
+p, span, a {
+  font-size: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 40px;
+  border-style: solid;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+a:hover {
+  background-color: black;
+  color: purple;
 }
 
 .dance {
