--- a/dance/src/main/resources/templates/index.html
+++ b/dance/src/main/resources/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>DANCE DANCE!</title>
 </head>
@@ -16,7 +17,7 @@
     <div class="content">
       <h1>RULES</h1>
       <p>1. Use the arrows on your keyboard to make your character dance to the music!</p>
-      <p>2. Have</p>
+      <span>2. Have</span>
       <a href="/dance">FUN!</a>
     </div>
   </div>
