feat(dance): html, png, mp3

--- a/dance/src/main/resources/templates/dance.html
+++ b/dance/src/main/resources/templates/dance.html
@@ -14,10 +14,12 @@
     </div>
   </div>
 
-  <iframe src="cold.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  <iframe src="betty.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 
   <div class="dance">
-    <img class="arms" src="arms.png">
+    <img class="left" src="left.png">
+    <img class="right" src="right.png">
+    <img class="tail" src="tail.png">
     <img class="base" src="base.png">
   </div>
 </div>
