feat(dance): changeable music!

--- a/dance/src/main/resources/templates/dance.html
+++ b/dance/src/main/resources/templates/dance.html
@@ -14,7 +14,7 @@
     </div>
   </div>
 
-  <iframe src="betty.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+  <iframe class="music "src="betty.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
 
   <div class="dance">
     <img class="left" src="left.png">
