--- a/dance/src/main/resources/templates/index.html
+++ b/dance/src/main/resources/templates/index.html
@@ -17,8 +17,8 @@
     <div class="content">
       <h1>RULES</h1>
       <p>1. Use the arrows on your keyboard to make your character dance to the music!</p>
-      <span>2. Have</span>
-      <a href="/dance">FUN!</a>
+      <p>2. Press SPACE to change music randomly!</p>
+      <span>3. Have</span><a href="/dance">FUN!</a>
     </div>
   </div>
 </body>
